--- a/lab3/package.json
+++ b/lab3/package.json
@@ -2,11 +2,19 @@
   "name": "lab3",
   "version": "1.0.0",
   "description": "",
-  "main": "app.js",
+  "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node app.js"
+    "start": "node index"
   },
-  "author": "",
-  "license": "ISC"
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/hieugch18038/lab3"
+  },
+  "author": "Long",
+  "license": "ISC",
+  "bugs": {
+    "url": "https://github.com/hieugch18038/lab3/issues"
+  },
+  "homepage": "https://github.com/hieugch18038/lab3#readme"
 }
